o link modules with libslurm to allow resolution of symbols in all cases.

--- a/trunk/src/plugins/auth/Makefile.am
+++ b/trunk/src/plugins/auth/Makefile.am
@@ -20,7 +20,7 @@ pkglib_LTLIBRARIES = auth_none.la $(AUTHD) $(MUNGE)
 # Null authentication plugin.
 auth_none_la_SOURCES = auth_none.c
 auth_none_la_LDFLAGS = $(PLUGIN_FLAGS)
-auth_none_la_LIBADD = 
+auth_none_la_LIBADD = -lslurm
 
 # Authd authentication plugin -- requires libauth
 auth_authd_la_SOURCES = auth_authd.c
@@ -30,6 +30,6 @@ auth_authd_la_LIBADD =  -lauth
 # Munge authentication plugin
 auth_munge_la_SOURCES = auth_munge.c
 auth_munge_la_LDFLAGS = $(PLUGIN_FLAGS) 
-auth_munge_la_LIBADD =  -lmunge 
+auth_munge_la_LIBADD =  -lslurm -lmunge 
 
 
