o Link against built libslurm, not installed one.

--- a/trunk/src/plugins/auth/Makefile.am
+++ b/trunk/src/plugins/auth/Makefile.am
@@ -20,16 +20,16 @@ pkglib_LTLIBRARIES = auth_none.la $(AUTHD) $(MUNGE)
 # Null authentication plugin.
 auth_none_la_SOURCES = auth_none.c
 auth_none_la_LDFLAGS = $(PLUGIN_FLAGS)
-auth_none_la_LIBADD = -lslurm
+auth_none_la_LIBADD = $(top_builddir)/src/api/libslurm.la
 
 # Authd authentication plugin -- requires libauth
 auth_authd_la_SOURCES = auth_authd.c
 auth_authd_la_LDFLAGS = $(PLUGIN_FLAGS) 
-auth_authd_la_LIBADD =  -lauth 
+auth_authd_la_LIBADD =  $(top_builddir)/src/api/libslurm.la -lauth 
 
 # Munge authentication plugin
 auth_munge_la_SOURCES = auth_munge.c
 auth_munge_la_LDFLAGS = $(PLUGIN_FLAGS) 
-auth_munge_la_LIBADD =  -lslurm -lmunge 
+auth_munge_la_LIBADD =  $(top_builddir)/src/api/libslurm.la -lmunge 
 
 
