o Changed reference to "Brett Chun" to "Brent Chun"

--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -132,7 +132,7 @@
 #   components
 #
 # "auth/none"  : no authentication, the default
-# "auth/authd" : Brett Chun's authd
+# "auth/authd" : Brent Chun's authd
 #
 # AuthType=auth/none
 
