o use setproctitle() to attempt process title change in slurmd.  o add calls to interconnect_node_init/fini() in slurmd.  o move interconnect_postfini() above wait_for_io()

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -22,21 +22,22 @@ slurmd_LDADD = 					   \
 	$(SSL_LIBS) 
 
 
-common_sources = 	        \
-	slurmd.c slurmd.h       \
-	req.c req.h		\
-	mgr.c mgr.h		\
-	smgr.c smgr.h		\
-	get_mach_stat.c         \
-	get_mach_stat.h		\
-	read_proc.c 	        \
-	job.c job.h		\
-	io.c io.h		\
-	semaphore.c semaphore.h	\
-	shm.c shm.h		\
-	fname.c fname.h		\
-	ulimits.c ulimits.h     \
-	setenvpf.c setenvpf.h   \
+common_sources = 	        	\
+	slurmd.c slurmd.h       	\
+	req.c req.h			\
+	mgr.c mgr.h			\
+	smgr.c smgr.h			\
+	get_mach_stat.c         	\
+	get_mach_stat.h			\
+	read_proc.c 	        	\
+	job.c job.h			\
+	io.c io.h			\
+	semaphore.c semaphore.h		\
+	shm.c shm.h			\
+	fname.c fname.h			\
+	ulimits.c ulimits.h     	\
+	setenvpf.c setenvpf.h   	\
+	setproctitle.c setproctitle.h 	\
 	interconnect.h
 
 slurmd_SOURCES = $(common_sources) $(interconnect_sources)
