o remove interconnect_env() and place functionality into interconnect_attach()  o session manager waits for processes in its session, not just children.    This fixes a problem when tasks are being attached to by a debugger.  o Add elanhosts.[ch] for Elan host config file parsing. Used in slurm    to install ElanID/hostname pairs into the kernel. Note that the format    of the elanhosts config file has changed.

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -9,7 +9,7 @@ sbin_PROGRAMS = slurmd
 INCLUDES = -I$(top_srcdir) $(SSL_CPPFLAGS)
 
 if WITH_ELAN
-interconnect_sources = elan_interconnect.c
+interconnect_sources = elan_interconnect.c elanhosts.c elanhosts.h
 else
 interconnect_sources = no_interconnect.c
 endif
