--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -285,6 +285,7 @@ typedef struct node_info {
 	uint32_t weight;	/* arbitrary priority of node for scheduling */
 	char *features;		/* arbitrary list of features for node */
 	char *partition;	/* name of partition node configured to */
+	char *reason;   	/* reason for node being DOWN or DRAINING */
 } node_info_t;
 
 typedef struct node_info_msg {
@@ -409,6 +410,7 @@ typedef struct submit_response_msg {
 typedef struct slurm_update_node_msg {
 	char *node_names;	/* comma separated list of required nodes */
 	uint16_t node_state;	/* see enum node_states */
+	char *reason;   	/* reason for node being DOWN or DRAINING */
 } update_node_msg_t;
 
 typedef struct partition_info update_part_msg_t;
