Major sinfo changes: added --sort option along with SINFO_SORT environment variable and new sinfo.c module, accept multiple node states, underscore in header removed, data reported in all lower-case, slight changes to header values.

--- a/trunk/src/sinfo/Makefile.am
+++ b/trunk/src/sinfo/Makefile.am
@@ -14,7 +14,7 @@ sinfo_LDADD =					  \
 	$(POPT_LIBS)
 
 noinst_HEADERS = sinfo.h print.h
-sinfo_SOURCES = sinfo.c opts.c print.c
+sinfo_SOURCES = sinfo.c opts.c print.c sort.c
 
 force:
 $(sinfo_LDADD) : force
