o build srun.wrapper.c with .stabs information that points to    ${pklibdir}/src  o only include srun.wrapper.c if compiling --with-totalview.

--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -6,24 +6,64 @@ AUTOMAKE_OPTIONS = foreign
 INCLUDES = -I$(top_srcdir) $(POPT_INCLUDES) 
 
 if WITH_TOTALVIEW
-totalview = slurm_auth_authd.c
-else
-auth_sources = slurm_auth_authd.c
+SRUN_WRAPPER_OBJ = srun.wrapper.o
 endif
+
 
 bin_PROGRAMS = srun
 
-srun_SOURCES = srun.c opt.c env.c opt.h env.h job.c job.h net.c net.h \
-	       msg.c msg.h io.c io.h launch.h launch.c attach.h       \
-               reattach.c reattach.h fname.h fname.c srun.wrapper.c   \
-               signals.c signals.h sigstr.c sigstr.h allocate.c allocate.h
+srun_SOURCES = \
+	srun.c \
+	opt.c opt.h \
+	env.c env.h \
+	job.c job.h \
+	net.c net.h \
+	msg.c msg.h \
+	io.c io.h   \
+	launch.c    \
+	launch.h    \
+	attach.h    \
+	reattach.c  \
+	reattach.h  \
+	fname.c     \
+	fname.h     \
+	signals.c   \
+	signals.h   \
+	sigstr.c    \
+	sigstr.h    \
+	allocate.c  \
+	allocate.h
 
-srun_LDADD = $(top_builddir)/src/common/libcommon.la   \
-             $(top_builddir)/src/common/libhostlist.la \
-             $(top_builddir)/src/common/libeio.la      \
-	     $(top_builddir)/src/api/libslurm.la       \
-	     $(POPT_LIBS) 
+convenience_libs =  \
+	$(top_builddir)/src/common/libcommon.la   \
+	$(top_builddir)/src/common/libhostlist.la \
+	$(top_builddir)/src/common/libeio.la      \
+	$(top_builddir)/src/api/libslurm.la       \
+	$(POPT_LIBS) 
+
+srun_LDADD = \
+	$(SRUN_WRAPPER_OBJ) \
+	$(convenience_libs)
+
+EXTRA_srun_SOURCES = srun.wrapper.c
+srun_DEPENDENCIES = $(SRUN_WRAPPER_OBJ)
 
 force:
-$(srun_LDADD) : force
+$(convenience_libs) : force
 	@cd `dirname $@` && $(MAKE) `basename $@`
+
+srun.wrapper.o: srun.wrapper.c
+	if echo $(CC) | grep gcc; then \
+          $(CC) -S -g $(CFLAGS) $(CPPFLAGS) \
+                $(top_srcdir)/src/srun/srun.wrapper.c; \
+          dir1=`cd $(top_srcdir) && pwd`;  dir2=$(pkglibdir)/src; \
+	  perl -i -ple "s|$$dir1/src/srun|$$dir2|g;" srun.wrapper.s; \
+	  perl -i -ple "s|\".*/srun.wrapper.c|\"srun.wrapper.c|g;" \
+                       srun.wrapper.s; \
+	  $(CC) -c -g $(CFLAGS) $(CPPFLAGS) srun.wrapper.s; \
+	else \
+	  $(COMPILE) srun.wrapper.c; \
+	fi
+
+CLEANFILES = \
+	srun.wrapper.s
