o set umask before installing srun.wrapper.c

--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -70,6 +70,7 @@ CLEANFILES = \
 
 install-exec-local:
 	if test -n "$(SRUN_WRAPPER_OBJ)"; then \
+	  umask 022; \
 	  $(INSTALL) -D -m 644 $(top_srcdir)/src/srun/srun.wrapper.c \
 	                       $(DESTDIR)$(pkglibdir)/src/srun.wrapper.c; \
 	fi
