--- a/trunk/src/slurmctld/Makefile.am
+++ b/trunk/src/slurmctld/Makefile.am
@@ -17,6 +17,7 @@ slurmctld_LDADD = 					\
 
 slurmctld_SOURCES = 	\
 	agent.h		\
+	backup.c	\
 	locks.h  	\
 	slurmctld.h	\
 	agent.c		\
@@ -27,6 +28,7 @@ slurmctld_SOURCES = 	\
 	node_mgr.c 	\
 	node_scheduler.c\
 	partition_mgr.c \
+	proc_req.c \
 	read_config.c	\
 	step_mgr.c
 
