Define proc_req.h, change other timers to use functions defined therein. Changed the logging level of a few other message.

--- a/trunk/src/slurmctld/Makefile.am
+++ b/trunk/src/slurmctld/Makefile.am
@@ -30,6 +30,7 @@ slurmctld_SOURCES = 	\
 	ping_nodes.c	\
 	ping_nodes.h	\
 	proc_req.c	\
+	proc_req.h	\
 	read_config.c	\
 	slurmctld.h	\
 	step_mgr.c
