--- a/trunk/src/squeue/Makefile.am
+++ b/trunk/src/squeue/Makefile.am
@@ -10,8 +10,7 @@ bin_PROGRAMS = squeue
 
 LDADD = $(top_builddir)/src/common/libcommon.la 	\
 	$(top_builddir)/src/common/libhostlist.la	\
-	$(top_builddir)/src/api/libslurm.la     	\
-	$(POPT_LIBS)
+	$(top_builddir)/src/api/libslurm.la
 
 noinst_HEADERS = squeue.h print.h
 squeue_SOURCES = squeue.c print.c opts.c sort.c
