--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -3,7 +3,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-INCLUDES = -I$(top_srcdir) $(POPT_INCLUDES) 
+INCLUDES = -I$(top_srcdir) 
 
 if WITH_TOTALVIEW
 SRUN_WRAPPER_OBJ = srun.wrapper.o
@@ -38,8 +38,7 @@ convenience_libs =  \
 	$(top_builddir)/src/common/libcommon.la   \
 	$(top_builddir)/src/common/libhostlist.la \
 	$(top_builddir)/src/common/libeio.la      \
-	$(top_builddir)/src/api/libslurm.la       \
-	$(POPT_LIBS) 
+	$(top_builddir)/src/api/libslurm.la
 
 srun_LDADD = \
 	$(SRUN_WRAPPER_OBJ) \
