o set dumpable flag to 1 in slurmd after setuid()s are complete    if have PR_SET_DUMPABLE

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -39,7 +39,7 @@ dnl Checks for header files.
 dnl
 AC_CHECK_HEADERS(mcheck.h values.h socket.h sys/socket.h  \
                  stdbool.h sys/ipc.h sys/shm.h sys/sem.h errno.h \
-                 stdlib.h dirent.h pthread.h \
+                 stdlib.h dirent.h pthread.h sys/prctl.h \
 		 )
 AC_HEADER_SYS_WAIT
 AC_HEADER_TIME
