Added plugin to log job completion. jobcomp_filetxt will log job info to a text file specified in the configure file.

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -311,6 +311,7 @@ AC_CONFIG_FILES([Makefile
 		 src/sinfo/Makefile
 		 src/plugins/Makefile
 		 src/plugins/auth/Makefile
+		 src/plugins/jobcomp/Makefile
 		 doc/Makefile
 		 doc/man/Makefile
 		 testsuite/Makefile
