Remove _too_many_fragments() function since DPCS is now smart enough to avoid highly fragmented resource allocations. Add list of excluded nodes to job info dumpped and reported. Fix how mis-matched RPC version number are handled. Let error code get back to the API function. Dump job state information upon each job's termination via plugin. Re-issue incomplete write requests in job/partition state save. Make slurmctld continue proper operation without any default partition (gnats:317). Add command/RPC to delete a partition. Retry socket connection for slurmd/io.c as needed (gnats:253).

--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -137,6 +137,25 @@
 # AuthType=auth/none
 
 #
+# o Define the job completion logging mechanism to be used
+#
+# "jobcomp/none"    : no job logging, the default
+# "jobcomp/filetxt" : log job record to a text file
+#
+# JobCompType=jobcomp/filetxt
+
+
+#
+# o Defile location where job completion logs are to be written
+#   Interpretation of the parameter is dependent upon the logging 
+#   mechanism used (specified by the JobCompType parameter). For
+#   "JobCompType=jobcomp/filetxt" the value of JobCompLoc should 
+#   be the fully qualified pathname of a file into which text 
+#   records are appended.
+#
+# JobCompLoc = /var/log/slurm.job.log
+
+#
 # o Define the places to look for SLURM plugins.  This is a
 #   colon-separated list of directories, just like the PATH
 #   environment variable.
