--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -228,7 +228,11 @@ typedef struct job_info {
 	uint32_t min_memory;	/* minimum real memory required per node */
 	uint32_t min_tmp_disk;	/* minimum temporary disk required per node */
 	char *req_nodes;	/* comma separated list of required nodes */
-	int *req_node_inx;	/* list index pairs into node_table: 
+	int *req_node_inx;	/* required list index pairs into node_table: 
+				 * start_range_1, end_range_1, 
+				 * start_range_2, .., -1  */
+	char *exc_nodes;	/* comma separated list of excluded nodes */
+	int *exc_node_inx;	/* exclueded list index pairs into node_table: 
 				 * start_range_1, end_range_1, 
 				 * start_range_2, .., -1  */
 	char *features;		/* comma separated list of required features */
@@ -320,6 +324,10 @@ typedef struct partition_info {
 				 * null indicates all */
 } partition_info_t;
 
+typedef struct delete_partition_msg {
+	char *name;		/* name of partition to be delete */
+} delete_part_msg_t;
+
 typedef struct resource_allocation_response_msg {
 	uint32_t job_id;	/* assigned job id */
 	char *node_list;	/* assigned list of nodes */
@@ -368,6 +376,8 @@ typedef struct slurm_ctl_conf {
 	uint16_t heartbeat_interval; /* interval between heartbeats, seconds */
 	uint16_t inactive_limit;/* seconds of inactivity before a
 				 * inactive resource allocation is released */
+	char *job_comp_type;	/* job completion logger type */
+	char *job_comp_loc;	/* job completion logging location */
 	uint16_t kill_wait;	/* seconds between SIGXCPU to SIGKILL 
 				 * on job termination */
 	uint16_t max_job_cnt;	/* maximum number of active jobs */
@@ -842,13 +852,20 @@ extern void slurm_print_partition_info PARAMS((
 	FILE *out , partition_info_t * part_ptr, int one_liner ));
 
 /*
- * slurm_update_partition - issue RPC to a partition's configuration per  
- *	request, only usable by user root
+ * slurm_update_partition - issue RPC to update a partition's configuration
+ *	per request, only usable by user root
  * IN part_msg - description of partition updates
  * RET 0 on success or slurm error code
  */
 extern int slurm_update_partition PARAMS(( update_part_msg_t * part_msg ));
 
+/*
+ * slurm_delete_partition - issue RPC to delete a partition, only usable
+ *	by user root
+ * IN part_msg - description of partition to delete
+ * RET 0 on success or slurm error code
+ */
+extern int slurm_delete_partition PARAMS(( delete_part_msg_t * part_msg ));
 
 /*****************************************************************************\
  *	SLURM PING/RECONFIGURE/SHUTDOWN FUNCTIONS
