Slurmctld now pings srun periodically. If srun fails to respond, the job and/or job step(s) will have their resources de-allocated and be killed. A resource allocation will not be release unless no job steps are active for at least InactiveLimit seconds. DPCS jobs will be subject to this forced de-allocation if they remain inactive for an extended period of time, which can get SLURM and DPCS back in sync if DPCS does a cold-start.

--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -177,9 +177,9 @@
 #    "HeartbeatInterval": The interval, in seconds, at which the SLURM
 #                         controller tests the status of other daemons.
 #
-#    "InactiveLimit"    : The interval, in seconds, a job is permitted to
-#                         be inactive (no active job steps) before it is
-#                         terminated.
+#    "InactiveLimit"    : The interval, in seconds, a job or job step is 
+#                         permitted to be inactive (srun command not responding)
+#                         before being terminated.
 #
 #    "MinJobAge"        : The time, in seconds, after a job completes before
 #                         its record is purged from the active slurmctld data.
