--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -1,3 +1,3 @@
 # $Id$
 
-SUBDIRS = common api slurmctld slurmd srun scontrol scancel slurm_tv_clean squeue sinfo plugins
+SUBDIRS = common api slurmctld slurmd srun scontrol scancel squeue sinfo plugins
