--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -648,7 +648,7 @@ extern void slurm_print_ctl_conf PARAMS((
  *	information if changed since update_time 
  * IN update_time - time of current configuration data
  * IN job_info_msg_pptr - place to store a job configuration pointer
- * RET 0 or a slurm error code
+ * RET 0 or -1 on error
  * NOTE: free the response using slurm_free_job_info_msg
  */
 extern int slurm_load_jobs PARAMS((
@@ -682,11 +682,19 @@ extern void slurm_print_job_info PARAMS(( FILE*, job_info_t * job_ptr,
 					  int one_liner ));
 
 /*
+ * slurm_get_end_time - get the expected end time for a given slurm job
+ * IN jobid     - slurm job id
+ * end_time_ptr - location in which to store scheduled end time for job 
+ * RET 0 or -1 on error
+ */
+extern int slurm_get_end_time PARAMS((uint32_t jobid, time_t *end_time_ptr));
+
+/*
  * slurm_pid2jobid - issue RPC to get the slurm job_id given a process_id 
  *	on this machine
  * IN job_pid - process_id of interest on this machine
  * OUT job_id_ptr - place to store a slurm job_id
- * RET 0 or a slurm error code
+ * RET 0 or -1 on error
  */
 extern int slurm_pid2jobid PARAMS(( pid_t job_pid, uint32_t * job_id_ptr )) ;
 
@@ -694,7 +702,7 @@ extern int slurm_pid2jobid PARAMS(( pid_t job_pid, uint32_t * job_id_ptr )) ;
  * slurm_update_job - issue RPC to a job's configuration per request, 
  *	only usable by user root or (for some parameters) the job's owner
  * IN job_msg - description of job updates
- * RET 0 on success or slurm error code
+ * RET 0 or -1 on error
  */
 extern int slurm_update_job PARAMS(( job_desc_msg_t * job_msg )) ;
 
