Correct default value listed for SLurmdSpoolDir.

--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -59,7 +59,7 @@
 #
 # Example:
 # 
-# SlurmdSpoolDir=/tmp/slurmd	# default: "/var/spool/slurm"
+# SlurmdSpoolDir=/var/tmp/slurmd	# default: "/tmp/slurmd"
 
 
 #
