--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -56,6 +56,11 @@ Summary: SLURM auth implementation using Chris Dunlap's Munge
 Group: System Environment/Base
 Requires: slurm munge
 
+%package jobcomp-filetxt
+Summary: SLURM jobcomp plugin that stores expired data in a text file
+Group: System Environment/Base
+Requires: slurm
+
 %description 
 SLURM is an open source, fault-tolerant, and highly
 scalable cluster management and job scheduling system for Linux clusters
@@ -133,6 +138,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man8/*
 %dir /etc/slurm
 %dir %{_libdir}/slurm
+%{_libdir}/slurm/jobcomp_none.so
 %dir %{_libdir}/slurm/src
 %config(noreplace) /etc/rc.d/init.d/slurm
 %config(noreplace) /etc/slurm/slurm.conf
@@ -166,6 +172,12 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/slurm/auth_authd.so
 %endif
 #############################################################################
+
+%files jobcomp-filetxt
+%defattr(-,root,root)
+%{_libdir}/slurm/jobcomp_filetxt.so
+#############################################################################
+
 
 %pre
 #if [ -x /etc/rc.d/init.d/slurm ]; then
@@ -203,6 +215,8 @@ fi
 
 
 %changelog
+* Mon Nov 03 2003 Mark Grondona <mgrondona@llnl.gov>
+- also package "jobcomp" plugins
 * Fri Oct 10 2003 Mark Grondona <mgrondona@llnl.gov>
 - set _unpackaged_files_terminate_build to off
 * Wed Sep 17 2003 Mark Grondona <mgrondona@llnl.gov>
