--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -390,7 +390,10 @@ typedef struct slurm_ctl_conf {
 	char *plugindir;	/* pathname to plugins */
 	char *prolog;		/* pathname of job prolog */
 	uint16_t ret2service;	/* 1 return DOWN node to service at 
-				 * registration */ 
+				 * registration */
+	char *schedtype;	/* type of scheduler to use */
+	char *schedauth;	/* credential for scheduler (if needed) */
+	uint16_t schedport;	/* port for scheduler connection */
 	uint16_t slurm_user_id;	/* uid of slurm_user_name */
 	char *slurm_user_name;	/* user that slurmctld runs as */
 	uint16_t slurmctld_debug; /* slurmctld logging level */
