Add logic for slurmctld to send launch response to srun whenever a queued allocation request is satisfied. Srun just has a stub to catch and log the message while using polling to notice the allocation has been made.

--- a/trunk/src/slurmctld/Makefile.am
+++ b/trunk/src/slurmctld/Makefile.am
@@ -12,6 +12,7 @@ sbin_PROGRAMS = slurmctld
 slurmctld_LDADD = 					\
 	$(top_builddir)/src/common/libcommon.la    	\
 	$(top_builddir)/src/common/libhostlist.la      	\
+	$(top_builddir)/src/api/libslurm.la		\
 	$(top_builddir)/src/common/libdaemonize.la 
 
 
