--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -56,11 +56,6 @@ Summary: SLURM auth implementation using Chris Dunlap's Munge
 Group: System Environment/Base
 Requires: slurm munge
 
-%package jobcomp-filetxt
-Summary: SLURM jobcomp plugin that stores expired data in a text file
-Group: System Environment/Base
-Requires: slurm
-
 %package sched-wiki
 Summary: SLURM scheduling plugin for the Maui scheduler.
 Group: System Environment/Base
@@ -84,10 +79,6 @@ SLURM authentication module for Brent Chun's authd
 
 %description auth-munge
 SLURM authentication module for Chris Dunlap's Munge
-
-%description jobcomp-filetxt
-SLURM jobcomp module which saves job information in an ascii flat-file
-before purging jobs from memory.
 
 %description sched-wiki
 SLURM scheduling plugin for the Maui scheduler.
@@ -151,6 +142,7 @@ rm -rf $RPM_BUILD_ROOT
 %dir /etc/slurm
 %dir %{_libdir}/slurm
 %{_libdir}/slurm/jobcomp_none.so
+%{_libdir}/slurm/jobcomp_filetxt.so
 %{_libdir}/slurm/sched_backfill.so
 %{_libdir}/slurm/sched_builtin.so
 %dir %{_libdir}/slurm/src
@@ -185,11 +177,6 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root)
 %{_libdir}/slurm/auth_authd.so
 %endif
-#############################################################################
-
-%files jobcomp-filetxt
-%defattr(-,root,root)
-%{_libdir}/slurm/jobcomp_filetxt.so
 #############################################################################
 
 %files sched-wiki
@@ -236,6 +223,7 @@ fi
 %changelog
 * Thu Dec 11 2003 Mark Grondona <mgrondona@llnl.gov>
 - package slurm sched plugins 
+- removed jobcomp-filetxt package -- plugin now part of base package.
 * Mon Nov 03 2003 Mark Grondona <mgrondona@llnl.gov>
 - also package "jobcomp" plugins
 * Fri Oct 10 2003 Mark Grondona <mgrondona@llnl.gov>
